@@ -38,7 +38,3 @@ allprojects {
 // task clean(type: Delete) {
 //     delete rootProject.buildDir
 // }
-
-// tasks.withType(JavaCompile) {
-//     options.compilerArgs += ["--add-opens", "java.base/java.io=ALL-UNNAMED"]
-// }
